[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[project]
name = "accml"
version = "0.2.0b1"
description = "python accelerator middle layer"
authors = [
     {name = "Waheedullah Sulaiman Khail", email = "<waheedullah.sulaiman_khail@helmholtz-berlin.de"},
     {name = "Pierre Schnizer", email = "<pierre.schnizer@helmholtz-berlin.de"},
]
license = "GPL-3.0"
# until we have the repoitory
homepage = "https://github.com/python-accelerator-middle-layer/accml"
documentation = "https://github.com/python-accelerator-middle-layer/accml"
repository = "https://github.com/python-accelerator-middle-layer/accml.git"
keywords = []

[tool.poetry]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
pydantic = "*"
jsons = "*"

numpy = "*"

# actually only for least square fitting
scipy = "*"

# any state machine implementation would do
# currently it is only used to track if new calculations
# are required
transitions = "*"


# for simulation engine backend ... currently only using pyat
accelerator_toolbox = "*"

# lat2db ... for readling lattice
lat2db = ">=0.1"

# move support routines for fit error calculation from this package here
# then this package can be taken out
bact_math_utils = ">=0.1.1"

# Packages below should be optional ones, only to be installed
# depending on what is used.
bluesky = {version = "*", optional = true}
# typically using mongodb as a database / storage
databroker = {version = "<2.0", optional = true}
# ophyd async does not specify which transport is to be used
ophyd-async = {version = "*", optional = true}
# epics transport protocols
aioca = {version = "*", optional = true}
p4p = {version = "*", optional = true}
# trango interface
pytango = {version = "*", optional = true}

[tool.poetry.extras]
bluesky-epics = ["ophyd-async", "aioca", "p4p", "epics", "bluesky"]
bluesky-tango = ["ophyd-async", "pytango", "bluesky"]
